# oxide

./: .gitignore  .gitmodules  Cargo.toml  README.md  cluster.example.yaml
.github/workflows/: ci.yml
docs/: architecture.md  cilium.md  configuration.md  development.md  hetzner.md  scaling.md  talos.md  troubleshooting.md
src/: main.rs
src/cilium/: mod.rs
src/config/: mod.rs
src/hcloud/: client.rs  firewall.rs  mod.rs  models.rs  network.rs  server.rs  ssh_key.rs
src/k8s/: client.rs  mod.rs  nodes.rs  resources.rs
src/talos/: client.rs  config.rs  mod.rs
src/utils/: command.rs  mod.rs  polling.rs
