[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
authors = ["Oxide - Talos Kubernetes with Cilium"]

[dependencies]
# HTTP client for Hetzner Cloud API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4.0", features = ["derive"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Base64 encoding for cloud-init
base64 = "0.22"
# Random generation for secrets
rand = "0.8"
# ED25519 SSH key generation
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Process execution for kubectl/talosctl
tokio-process = "0.2"
# URL handling
url = "2.5"
# Templating for Talos/Cilium configs
handlebars = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
